added views for creating and editing tasks (including django-forms)

--- a/templates/task/task_list.html
+++ b/templates/task/task_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Task List</h1>
-    <a href="#">Create new Task</a>
+    <a href="{% url 'task-create' %}">Create new Task</a>
 
     <ul>
         {% for task in tasks %}
